--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ script:
 - yarn build
 - yarn run lint
 - yarn test
+after_success:
+  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  - ./scripts/ci-deployment/docker_ci.sh
